# restic-exporter

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-bake.hcl  docker-compose-local.yml  docker-compose.yml  entrypoint.sh  package.json  pyproject.toml  requirements.txt  restic-exporter.py
.github/workflows/: autotag.yml  release-docker.yml
exporter/: exporter.py
grafana/: grafana_dashboard.json
systemd/: restic-exporter  restic-exporter.service  restic-exporter.sysusers
tests/: __init__.py  test_exporter.py
