[project]
name = "restic-exporter"
version = "2.0.0"
description = ""
authors = [
    {name = "Diego Heras", email = "ngosang@hotmail.es"},
]
readme = "README.md"
requires-python = ">=3.12"
# NOTE: Update Dockerfile when changing dependencies
dependencies = [
    "prometheus-client==0.23.1",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-mock==3.15.1",
    "pytest-cov==7.0.0",
    "ruff==0.14.8",
]

[tool.ruff]
target-version = "py312"
# Default Black line-length is 88
line-length = 120

[tool.ruff.lint]
# E/F: pycodestyle/pyflakes
# I: import sorting (isort replacement)
select = ["E", "F", "I"]

[tool.ruff.format]
# Black-compatible formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
